Created a starting point that prints to the command line

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,26 @@ cmake_minimum_required(VERSION 3.26)
 project(gesallprov)
 
 set(CMAKE_CXX_STANDARD 20)
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
 
-add_executable(gesallprov main.cpp
-        parser.cpp
-        parser.h)
+set(Boost_USE_STATIC_LIBS OFF)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
+find_package(Boost REQUIRED COMPONENTS system)
+find_package(Threads REQUIRED)
+
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+    add_executable(${PROJECT_NAME}
+            main.cpp
+            config_parser.cpp
+            tcp_connection.cpp
+            plug_adapter.cpp
+            plug_adapter.h
+    )
+    target_link_libraries(${PROJECT_NAME}
+            ${Boost_LIBRARIES}
+            ${CMAKE_THREAD_LIBS_INIT}
+    )
+endif()
+
+
